openWebPage method. Made it work for  linux platform